[tool.poetry]
name = "pi_converter"
version = "1.0.2"
description = ""
authors = ["Saltwater Otter / Ben Cacak"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
